# atspi-counters

./: Cargo.toml  README.md  atspi-stats-2025-03-01-15-48-08.txt  atspi-stats-2025-03-01-15-49-08.txt  atspi-stats-2025-03-01-18-49-21.txt  atspi-stats-2025-03-01-23-19-59.txt  atspi-stats-2025-03-01-23-25-14.txt
src/: aggregate.rs  counters.rs  main.rs  matchers.rs  setup.rs  writer.rs
