[package]
  edition = "2024"
  name    = "atspi-counters"
  version = "0.1.0"

[dependencies]
  atspi        = "0.25.0"
  chrono       = "0.4.40"
  clap         = { version = "4.5.31", features = [ "derive" ] }
  ctrlc        = "3"
  once_cell    = "1.20.3"
  tokio        = { version = "1", features = [ "full" ] }
  tokio-stream = { version = "0.1", features = [ "full" ] }
